fixed z-index issue with image in lightbox, also lightbox only works on mobiles that have screens greater than 410px

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ p span {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background: #FFF;
-  z-index: 6;
+  z-index: 11;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px #444;
